[package]
name = "rupt_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
walkdir = "2"
rayon = "1.10"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
globset = "0.4"
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "0.11.6" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "0.11.6" }
